--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "bytes": "*",
     "should": "1.2.2",
     "mocha": "1.12.0",
-    "supertest": "0.7.1"
+    "supertest": "0.7.1",
+    "request": "~2.27.0"
   },
   "engines": {
     "node": "> 0.11.4"
